# zed-pylance

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  extension.toml  extension.wasm
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
