[package]
name = "zed-ruff"
version = "0.1.0"
edition = "2021"
publish = false
description = "Zed plugin for Ruff https://github.com/astral-sh/ruff"
authors = ["Rodney Osodo <socials@rodneyosodo.com>"]
license = "MIT"
homepage = "https://github.com/0x6flab/zed-ruff"
repository = "https://github.com/0x6flab/zed-ruff"
documentation = "https://github.com/0x6flab/zed-ruff"
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"
